Our greclipse-based steps are not working, disable them for now and document in #685.